fix: mobile layout refinement (tabs size, scroll, quick strategy visibility)

--- a/src/pages/bot-builder/toolbar/toolbar.scss
+++ b/src/pages/bot-builder/toolbar/toolbar.scss
@@ -12,7 +12,7 @@
 
     inset-inline-start: 23.2rem;
     background-color: var(--general-main-1);
-    z-index: 1;
+    z-index: 5;
 
     @include mobile-or-tablet-screen {
         height: 64px;
